--- a/Levantamento de Perdas/Other/Src/Usinagem_Engr_CDZ_5_.pa.yaml
+++ b/Levantamento de Perdas/Other/Src/Usinagem_Engr_CDZ_5_.pa.yaml
@@ -186,7 +186,7 @@ Screens:
 
               //ColorFade(RGBA(56; 96; 178; 1); -20%)
             OnSelect: |
-              =Set( varmaquina , "3353217002");
+              =Set( varmaquina , "3353217002-5");
               Set( varsetor ,  Label_setor_12.Text );
               Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
               Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
