--- a/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_CDZ_5%aa.fx.yaml
@@ -134,7 +134,7 @@ Usinagem_Engr_CDZ_5ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "3353217002");
+            =Set( varmaquina , "3353217002-5");
             Set( varsetor ,  Label_setor_12.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
